--- a/index.html
+++ b/index.html
@@ -62,21 +62,17 @@
     <section class="about">
       <div>
         <h2 class="about__title">Vivian Duarte</h2>
-        <p class="about__text">We became Nuvi in 2021 with the goal of serving customers from all over the world,
-          seeking to deliver the maximum quality and personality in each of the services provided.</p>
-        <p class="about__text">Our greatest joy in completing each of our deliveries, from when we create a logo for a
-          budding business to when we bring a brand to life through a unique animation, is to realize that a company
-          will be communicating in a more impactful way to the point of standing out in its market and elevating its
-          business results.</p>
-        <p class="about__text">We believe that a well-defined work process is an ideal path for delivering high-quality
-          results that meet each of our customer's expectations, so we directly outline the step-by-step process with
-          each contact before starting any of our projects.</p>
-        <p class="about__text">Now that you know a little bit more about us and have seen our portfolio, please get in
-          touch to discuss what the ideal package is for the service you need. We will be very happy to help you!</p>
+        <p class="about__text">I graduated in Manufacturing Engineering and worked in Oil and Gas for 4 years.
+        </p>
+        <p class="about__text">As a hobby, I started some interior design projects, and guess what? In the meantime I had the opportunity to come to Germany and apply this knowledge here.
+        </p>
+        <p class="about__text">In Germany, I looked more closely at the IT area and discovered the frontend, where I could apply both areas of knowledge: Engineering and Design.
+        </p>
+        <p class="about__text">I'm very happy and curious about what's coming ahead!</p>
       </div>
       <div class="about__founder">
         <div class="founder">
-          <img src="./assets/img/foto_nubia.png" alt="Photo of the first founder" class="founder__img">
+          <img src="./assets/img/foto1.jpeg" alt="Photo of the first founder" class="founder__img">
           <h2 class="founder__title">Vivian Duarte</h2>
           <p class="founder__subtitle">Front-end developer</p>
         </div>
@@ -108,147 +104,6 @@
           <h3 class="job_title">JavaScript Introduction</h3>
           <a href="https://viviandhj.github.io/portfolio-imersao" target="_blank"><img class="portfolio__subtitle" src="./assets/img/javascript_introduction.png" alt="Link to Javascript Introduction"></a>
         </div>
-
-        <!-- <div class="intro-outro">
-          <img class="portfolio__subtitle" src="./assets/img/intro_e_outro_2.svg" alt="Intro and outro">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-              src="https://player.vimeo.com/video/811096628?h=2696b5d77f&title=0&byline=0&portrait=0"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
-        </div> -->
-
-        <!-- <div class="logo-design">
-          <img class="portfolio__subtitle" src="./assets/img/logo_design_2.svg" alt="Logo design">
-          <div id="carouselLogoDesign" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="4"
-                aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="5"
-                aria-label="Slide 6"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="6"
-                aria-label="Slide 7"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="7"
-                aria-label="Slide 8"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="8"
-                aria-label="Slide 9"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="9"
-                aria-label="Slide 10"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="10"
-                aria-label="Slide 11"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="11"
-                aria-label="Slide 12"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="12"
-                aria-label="Slide 13"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="13"
-                aria-label="Slide 14"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="14"
-                aria-label="Slide 15"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="15"
-                aria-label="Slide 16"></button>
-              <button type="button" data-bs-target="#carouselLogoDesign" data-bs-slide-to="16"
-                aria-label="Slide 17"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_01.jpg" class="d-block w-100"
-                  alt="logo design e-lens">
-              </div>
-              <div class="carousel-item active">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_02.jpg" class="d-block w-100"
-                  alt="logo design use pets">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_03.jpg" class="d-block w-100"
-                  alt="logo design lisoca">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_04.jpg" class="d-block w-100"
-                  alt="logo design versa">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_05.jpg" class="d-block w-100"
-                  alt="logo design zagallo">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_06.jpg" class="d-block w-100"
-                  alt="logo design cries">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_07.jpg" class="d-block w-100"
-                  alt="logo design millyard">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_08.jpg" class="d-block w-100"
-                  alt="logo design pilgrims">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_09.jpg" class="d-block w-100"
-                  alt="logo design corgi">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_10.jpg" class="d-block w-100"
-                  alt="logo design cosmo cart">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_11.jpg" class="d-block w-100"
-                  alt="logo design newtier">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_12.jpg" class="d-block w-100"
-                  alt="logo design codelabb">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_13.jpg" class="d-block w-100"
-                  alt="logo design devs">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_14.jpg" class="d-block w-100"
-                  alt="logo design klc">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_15.jpg" class="d-block w-100"
-                  alt="logo design dishout">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_16.jpg" class="d-block w-100"
-                  alt="logo design expedicao">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/portfolio/logo_design/site-nuvi-logo-design-02_17.jpg" class="d-block w-100"
-                  alt="logo design flame">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselLogoDesign"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselLogoDesign"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div> -->
-
-        <!-- <div class="custom-animation">
-          <img class="portfolio__subtitle" src="./assets/img/custom_animation_2.svg" alt="Custom animations">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe
-              src="https://player.vimeo.com/video/811097169?h=b627c59a97&title=0&byline=0&portrait=0"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
-        </div> -->
-
       </div>
 
 
@@ -260,34 +115,11 @@
   <footer class="final" onclick="closeMenu()"> 
     <div class="contact">
       <h2 class="contact__title">Let's talk!</h2>
-      <!-- <form class="contact__form" action="./contact.php" method="post" id="contact_form">
-        <div>
-          <fieldset class="contact__fieldset" for="name">Name</fieldset>
-          <input class="contact__input" type="text" id="name" name="from_name" />
-          <small id="textName" class="text_msg"></small>
-        </div>
-        <div>
-          <fieldset class="contact__fieldset" for="mail">Email</fieldset>
-          <input class="contact__input" type="email" id="email" name="from_email"/>
-          <small id="textEmail" class="text_msg"></small>
-        </div>
-        <div>
-          <fieldset class="contact__fieldset" for="msg">Message</fieldset>
-          <textarea class="contact__text" id="msg" name="message"></textarea>
-          <small id="textMessage" class="text_msg"></small>
-        </div>
-        <div class="g-recaptcha" data-sitekey="<?php echo $captchaKeyPublic; ?>"></div>
-        <small id="textForm" class="text_msg"></small>
-        <div class="contact__button">
-          <button type="submit" form="contact_form">SEND</button>
-        </div>
-      </form> -->
-
       <div class="contact__direct">
         <div id="contact"></div>
         <div class="contact__person">
           <p class="contact__email">viviandhj@gmail.com</p>
-          <a href="https://api.whatsapp.com/send?phone=4916096464828&text=Hello!%20How%20can%20I%20help%20you%3F" class="contact__phone" target="_blank"> WhatsApp: +49 160 9646-4828</a>
+          <a href="https://api.whatsapp.com/send?phone=4916096464828&text=Hello!%20How%20can%20I%20help%20you%3F" class="contact__phone" > WhatsApp: +49 160 9646-4828</a>
         </div>
       </div>
       <div class="social-media">
@@ -297,9 +129,6 @@
             alt="Image with link to social network Github"></a>
 
       </div>
-      <!-- <div class="about__place">
-        <img class="location-pin" src="./assets/img/based_in_rio.svg" alt="Based in Rio Brazil">
-      </div> -->
     </div>
     <div class="copyright">
       &#169; <a class = "link_devs" href="https://www.linkedin.com/in/vivian-duarte-jesus" target="_blank">VIVIAN DUARTE - DEVELOPER</a>
