adjusting contact phone

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div id="contact"></div>
         <div class="contact__person">
           <p class="contact__email">viviandhj@gmail.com</p>
-          <a href="https://api.whatsapp.com/send?phone=4916096464828&text=Hello!%20How%20can%20I%20help%20you%3F" class="contact__phone" > WhatsApp: +49 160 9646-4828</a>
+          <a href="https://api.whatsapp.com/send?phone=4916096464828" class="contact__phone" > WhatsApp: +49 160 9646-4828</a>
         </div>
       </div>
       <div class="social-media">
