changing portfolio images

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="about__founder">
         <div class="founder">
-          <img src="./assets/img/foto1.jpeg" alt="Photo of the first founder" class="founder__img">
+          <img src="./assets/img/foto2.jpeg" alt="Photo of the first founder" class="founder__img">
           <h2 class="founder__title">Vivian Duarte</h2>
           <p class="founder__subtitle">Front-end developer</p>
         </div>
@@ -81,28 +81,31 @@
     </section>
     <div id="pre-portfolio"></div>
     <section class="portfolio">
-      <h2 class="portfolio__title">Portfolio</h2>
-      <h3 class="portfolio__text">What kind of project are you looking for?</h3>
+      <h2 class="portfolio__title">My Projects</h2>
       <div class="portfolio__projects">
 
         <div class="nuvi">
-          <h3 class="job_title">Nuvi</h3>
-          <a href="https://www.nuvi.studio" target="_blank"><img class="portfolio__subtitle" src="./assets/img/nuvi.png" alt="Link to Nuvi site"></a>
+          <h3 class="job__title">Nuvi</h3>
+          <p class="job__subtitle">2023 - Freelancer project for a Brazilian Motion Design Studio. Technologies: HTML, CSS, JavaScript.</p>
+          <a href="https://www.nuvi.studio" target="_blank"><img class="job__img" src="./assets/img/nuvi.png" alt="Link to Nuvi site"></a>
         </div>
 
         <div class="amar">
-          <h3 class="job_title">Amar Meditação</h3>
-          <a href="https://viviandhj.github.io/portfolio-amar-meditacao" target="_blank"><img class="portfolio__subtitle" src="./assets/img/amar_meditacao.png" alt="Link to Amar Meditação"></a>
+          <h3 class="job__title">Amar Meditação</h3>
+          <p class="job__subtitle">2022 - Personal project based in a class. Technologies: HTML, CSS, JavaScript.</p>
+          <a href="https://viviandhj.github.io/portfolio-amar-meditacao" target="_blank"><img class="job__img" src="./assets/img/amar_meditacao.png" alt="Link to Amar Meditação"></a>
         </div>
 
         <div class="vector">
-          <h3 class="job_title">Vector</h3>
-          <a href="https://viviandhj.github.io/portfolio-vector" target="_blank"><img class="portfolio__subtitle" src="./assets/img/vector.png" alt="Link to Vector"></a>
+          <h3 class="job__title">Vector</h3>
+          <p class="job__subtitle">2022 - Project from a open course. Technologies: HTML, CSS Grid.</p>
+          <a href="https://viviandhj.github.io/portfolio-vector" target="_blank"><img class="job__img" src="./assets/img/vector.png" alt="Link to Vector"></a>
         </div>
 
         <div class="javascript">
-          <h3 class="job_title">JavaScript Introduction</h3>
-          <a href="https://viviandhj.github.io/portfolio-imersao" target="_blank"><img class="portfolio__subtitle" src="./assets/img/javascript_introduction.png" alt="Link to Javascript Introduction"></a>
+          <h3 class="job__title">JavaScript Introduction</h3>
+          <p class="job__subtitle">2022 - Project from a open course. Technologies: JavaScript.</p>
+          <a href="https://viviandhj.github.io/portfolio-imersao" target="_blank"><img class="job__img" src="./assets/img/javascript_introduction.png" alt="Link to Javascript Introduction"></a>
         </div>
       </div>
 
@@ -134,10 +137,5 @@
       &#169; <a class = "link_devs" href="https://www.linkedin.com/in/vivian-duarte-jesus" target="_blank">VIVIAN DUARTE - DEVELOPER</a>
     </div>
   </footer>
-  <script type="text/javascript" src="./assets/js/contato.js">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
 </body>
 </html>
