--- a/index.html
+++ b/index.html
@@ -137,5 +137,8 @@
       &#169; <a class = "link_devs" href="https://www.linkedin.com/in/vivian-duarte-jesus" target="_blank">VIVIAN DUARTE - DEVELOPER</a>
     </div>
   </footer>
+  <script type="text/javascript" src="./assets/js/contato.js">
+  </script>
+
 </body>
 </html>
