--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="menu__link" href="#">About</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#pre-portfolio">Portfolio</a>
+            <a class="menu__link" href="#portifolio">Portfolio</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="#contact">Get in touch</a>
@@ -48,7 +48,7 @@
             <a class="menu__link" href="#">About</a>
           </li>
           <li class="menu__item" onclick="closeMenu()">
-            <a class="menu__link" href="#pre-portfolio">Portfolio</a>
+            <a class="menu__link" href="#portifolio">Portfolio</a>
           </li>
           <li class="menu__item" onclick="closeMenu()">
             <a class="menu__link" href="#contact">Get in touch</a>
@@ -60,7 +60,7 @@
   <main id="main" onclick="closeMenu()">
     <div id="pre-about"></div>
     <section class="about">
-      <div>
+      <div class="about__description">
         <h2 class="about__title">Vivian Duarte</h2>
         <p class="about__text">I graduated in Manufacturing Engineering and worked in Oil and Gas for 4 years.
         </p>
@@ -80,7 +80,7 @@
     
     </section>
     <div id="pre-portfolio"></div>
-    <section class="portfolio">
+    <section class="portfolio" id="portifolio">
       <h2 class="portfolio__title">My Projects</h2>
       <div class="portfolio__projects">
 
@@ -126,10 +126,8 @@
         </div>
       </div>
       <div class="social-media">
-        <a href="https://www.linkedin.com/in/vivian-duarte-jesus" class="social-media__img" target="_blank"><img
-            src="./assets/img/linkedin.svg" alt="Image with link to social network LinkedIn"></a>
-        <a href="https://github.com/viviandhj" class="social-media__img" target="_blank"><img src="./assets/img/icon_github_24.png"
-            alt="Image with link to social network Github"></a>
+        <a href="https://www.linkedin.com/in/vivian-duarte-jesus" class="social-media__a" target="_blank"><img class="social-media__img" src="./assets/img/linkedin.svg" alt="Image with link to social network LinkedIn"></a>
+        <a href="https://github.com/viviandhj" class="social-media__a" target="_blank"><img class="social-media__img" src="./assets/img/github-mark-white.svg" alt="Image with link to social network Github"></a>
 
       </div>
     </div>
