changing og description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./assets/css/footer.css">
   <link rel="icon" type="image/png" href="./assets/img/vd_small.png"/>
   <meta property="og:title" content="Vivian Duarte" />
-  <meta property="og:description" content="A front-end -working in progress- developer." />
+  <meta property="og:description" content="A frontend -working in progress- developer." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="./assets/img/vivian_duarte_sqr">
   <!-- <meta property="og:url" content="https://www.nuvi.studio" />  -->
