--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 
         <div class="vector">
           <h3 class="job__title">Vector</h3>
-          <p class="job__subtitle">2022 - Project from a open course. Technologies: HTML, CSS Grid.</p>
+          <p class="job__subtitle">2022 - Project from an open course. Technologies: HTML, CSS Grid.</p>
           <a href="https://viviandhj.github.io/portfolio-vector" target="_blank"><img class="job__img" src="./assets/img/vector.png" alt="Link to Vector"></a>
         </div>
 
         <div class="javascript">
           <h3 class="job__title">JavaScript Introduction</h3>
-          <p class="job__subtitle">2022 - Project from a open course. Technologies: JavaScript.</p>
+          <p class="job__subtitle">2022 - Project from an open course. Technologies: JavaScript.</p>
           <a href="https://viviandhj.github.io/portfolio-imersao" target="_blank"><img class="job__img" src="./assets/img/javascript_introduction.png" alt="Link to Javascript Introduction"></a>
         </div>
       </div>
